# cmakeyixqy

./: .gitignore  ADAPT.md  CMakeLists.txt  LICENSE  README.md  cmakeyixqy-config.cmake
cmake/modules/: CompileOptions.cmake  GenerateTemplateExportHeader.cmake  HealthCheck.cmake
deploy/: CMakeLists.txt
docs/api-docs/: doxyfile.in
docs/manual/: CMakeLists.txt  cmakeyixqy.tex
source/: CMakeLists.txt
source/baselib/: CMakeLists.txt
source/baselib/src/: baselib.cpp
source/examples/fibcmd/: CMakeLists.txt
source/examples/fibgui/: CMakeLists.txt
source/fiblib/: CMakeLists.txt
source/fiblib/src/: Fibonacci.cpp
source/tests/: CMakeLists.txt
source/tests/fiblib-test/: fibonacci_test.cpp
